--- a/environment/frontend_server/static_dirs/css/style.css
+++ b/environment/frontend_server/static_dirs/css/style.css
@@ -11,9 +11,12 @@ body,
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: auto;
+  max-width: 100%;
 }
 
 #game-container>canvas {
   border-radius: 5px;
+  max-width: 100%;
+  height: auto;
 }
-
